Amira Login Form Edit

--- a/Front-End/Registration/main/style.css
+++ b/Front-End/Registration/main/style.css
@@ -12,7 +12,19 @@
   .text2{
       font-size: 30px;
   }
-  
+  @media only screen and (max-width: 767px) {
+
+    h1 {
+       font-size: 3em;
+    }
+ 
+    h2 {
+       font-size: 2em;
+    }
+ 
+ 
+ 
+ }
   navbar
   {
    position: fixed;
