--- a/Front-End/Registration/Doctors/forget_password/D_verification.css
+++ b/Front-End/Registration/Doctors/forget_password/D_verification.css
@@ -24,7 +24,7 @@
         width: 60%;
         height: 50px;
         border: none;
-        background: linear-gradient(70deg,#92E3A9,#01cce7,#2196F3);
+        background: linear-gradient(70deg,#FF735C,#ff8370,#2196F3);
         background-size: 200%;
         color: #fff;
         outline: none;
