--- a/Front-End/Registration/Patients/login/P_user_login.css
+++ b/Front-End/Registration/Patients/login/P_user_login.css
@@ -24,7 +24,7 @@
         width: 60%;
         height: 50px;
         border: none;
-        background: linear-gradient(70deg,#6E54B0,#01cce7,#2196F3);
+        background: linear-gradient(70deg,#92E3A9,#01cce7,#2196F3);
         background-size: 200%;
         color: #fff;
         outline: none;
