--- a/Front-End/Registration/main/assets/css/style.css
+++ b/Front-End/Registration/main/assets/css/style.css
@@ -1361,7 +1361,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #fff;
+  background:linear-gradient(#3498db , #65b8f0);
   box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
   padding: 30px 0;
   color: #222222;
