--- a/Front-End/Registration/main/assets/css/style.css
+++ b/Front-End/Registration/main/assets/css/style.css
@@ -1303,6 +1303,38 @@ section {
     transform: rotate(360deg);
   }
 }
+/** Start Top bar */
+.topnav {
+  padding: 0px;
+  background-color: #333;
+  position: sticky;
+}
+.topnav ul {
+  list-style-type: none;
+  overflow: hidden;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+.topnav li {
+  color: #3498db;
+  display: inline;
+  padding-left: 200px;
+  padding-top: 2px;
+  font-size: medium;
+  font-family: "Raleway", sans-serif;
+  text-align: center;
+}
+.topnav .getdark{
+  background: #fff;
+  padding: 6px;
+  border-radius: 25px;
+  font-family: "Raleway", sans-serif;
+  cursor: pointer;
+}
+
+/** End Top bar */
 
 /*--------------------------------------------------------------
 # Breadcrumbs
